--- a/views/auth/matches.hbs
+++ b/views/auth/matches.hbs
@@ -5,7 +5,7 @@
 <div class="movie_card" id="bright">
     <div class="info_section">
       <div class="movie_header">
-        <img class="locandina" src={{poster}}/>
+        {{!-- <img class="locandina" src={{poster}}/> --}}
         <h1><a class="clean-a2" href="/matches-details/{{imdbid}}">{{title}}</a></h1>
         <h4>{{year}}</h4>
       </div>
