--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,7 +29,7 @@
                   {{#if loggedInUser}}
                
                      <li class="nav-item">
-						      <a class="nav-link" href="/auth/{{loggedId}}">My User</a>
+						      <a class="nav-link" href="/auth/{{loggedId}}">My Profile</a>
 					      </li>
                      <li class="nav-item">
 						      <a class="nav-link" href="/favorites/{{loggedId}}">Favorites</a>
