--- a/views/movie/movies-favorites-details.hbs
+++ b/views/movie/movies-favorites-details.hbs
@@ -12,8 +12,18 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
     <div class="info_section">
 
       <div class="movie_header">
-        <img class="locandina" src={{movieDetails.poster}}/>
-                <div>
+        {{!-- <img class="locandina" src={{movieDetails.poster}}/> --}}
+        </div>
+        <h1 class="title-details"><a class="clean-a2 " href="/movies-details/{{imdbid}}">{{movieDetails.title}}</a></h1>
+        <ul>
+            {{#if errorMessage}}
+            <p class="white">{{errorMessage}}</p>
+            {{/if}}
+            <li><h4 class="movie-details-card-width">Runtime: {{movieDetails.runtime}}</h4></li>
+            <li><h4 class="movie-details-card-width">Rating: {{movieDetails.rating}}</h4></li>
+            <li><h4 class="movie-details-card-width">Plot: {{movieDetails.plot}}</h4></li>
+        </ul>
+                        <div>
                     {{!-- {{#if testToDelete}} --}}
             <form action="/favorites-details/{{movieDetails.imdbid}}/delete" method="POST">
                 <button class="del-button" type="submit"><img class="del-button" src="/images/waste.png" alt="saas"></button>
@@ -24,17 +34,6 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
             <form action="/favorites/{{movieDetails.imdbid}}/add" method="POST">
                 <button class="fav-button" type="submit"><img class="logo-button" src="/images/heart1-grey.png" alt="saas"></button>
             </form>
-        </div>
-        <h1><a class="clean-a2" href="/movies-details/{{imdbid}}">{{movieDetails.title}}</a></h1>
-        <ul>
-            {{#if errorMessage}}
-            <p class="white">{{errorMessage}}</p>
-            {{/if}}
-            <li><h4 class="movie-details-card-width">Runtime: {{movieDetails.runtime}}</h4></li>
-            <li><h4 class="movie-details-card-width">Rating: {{movieDetails.rating}}</h4></li>
-            <li><h4 class="movie-details-card-width">Plot: {{movieDetails.plot}}</h4></li>
-        </ul>
-
       </div>
       <div class="movie_desc">
       </div>
@@ -44,7 +43,7 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
         </ul>
       </div>
     </div>
-    {{!-- <img class="blur_back" src={{poster}} alt=""> --}}
+    <img class="blur_back" src="{{movieDetails.poster}}" alt="">
                 
             {{!-- Favoritar --}}
             <form action="/favorites/{{movieDetails.imdbid}}/add" method="POST">
