--- a/views/movie/movies-search.hbs
+++ b/views/movie/movies-search.hbs
@@ -5,7 +5,7 @@
 <div class="movie_card" id="bright">
     <div class="info_section">
       <div class="movie_header">
-        <img class="locandina" src={{poster}}/>
+        {{!-- <img class="locandina" src={{poster}}/> --}}
         <h1><a class="clean-a2" href="/movies-details/{{imdbid}}">{{title}}</a></h1>
         <h4>{{year}}</h4>
       </div>
@@ -17,7 +17,7 @@
         </ul>
       </div>
     </div>
-    <img class="blur_back src="{{poster}}" alt="">
+    <img class="blur_back" src="{{poster}}" alt="">
   </div>
 {{/each}}
 </div>
