--- a/views/movie/feeling-lucky.hbs
+++ b/views/movie/feeling-lucky.hbs
@@ -1,3 +1,5 @@
+<h1>TEST FEELING LUCKY</h1>
+
 {{!-- <h1>Movies Details</h1>
 {{#gt movieDetails.rating 5}}
 <div>Maior que 5</div> --}}
@@ -54,14 +56,10 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
       </div>
     </div>
     <img class="blur_back" src="{{movieDetails.poster}}" alt="">
-                
-            {{!-- Favoritar --}}
-
-            
+                <div id="testando"></div>
+            {{!-- Favoritar --}}           
 </div>
-
-    </div>
-</div>
+arrayFavDate, userDetail
 
 {{#if testMatch}}
 <div class="container">
