--- a/views/movie/feeling-lucky.hbs
+++ b/views/movie/feeling-lucky.hbs
@@ -10,42 +10,13 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
 
  --}}
 {{!-- {{/gt}} --}}
-<div class="movie_card movie_card-details" id="bright">
+    {{#each arrayFavDate}}
+<div class="movie_card" id="bright">
     <div class="info_section">
-
       <div class="movie_header">
-        {{!-- <img class="locandina" src={{movieDetails.poster}}/> --}}
-        <h1 class="title-details"><a class="clean-a2 " href="/movies-details/{{imdbid}}">{{movieDetails.title}}</a></h1>
-        <ul>
-            {{#if errorMessage}}
-            <p class="white">{{errorMessage}}</p>
-            {{/if}}
-            <li><h4 class="movie-details-card-width">Runtime: {{movieDetails.runtime}}</h4></li>
-            <li><h4 class="movie-details-card-width">Rating: {{movieDetails.rating}}</h4></li>
-            <li><h4 class="movie-details-card-width">Plot: {{movieDetails.plot}}</h4></li>
-        </ul>
-                            <div>
-            {{#if testToDelete}}
-            <form action="/favorites-details/{{movieDetails.imdbid}}/delete" method="POST">
-                <button class="del-button" type="submit"><img class="del-button fixing-buttons" src="/images/waste.png" alt="saas"></button>
-            </form>
-            {{else}}
-            <form action="/favorites-details/{{movieDetails.imdbid}}/delete" method="POST">
-                <button class="del-button" type="submit"><img class="del-button fixing-buttons" src="" alt=""></button>
-            </form>
-            {{/if}}
-        </div>
-        <div>
-            {{#if greyFav}}
-            <form action="/favorites/{{movieDetails.imdbid}}/add" method="POST">
-                <button class="fav-button" type="submit"><img class="logo-button fixing-heart" src="/images/heart1-grey.png" alt="saas"></button>
-            </form>
-            {{else}}
-            <form action="/favorites/{{movieDetails.imdbid}}/add" method="POST">
-                <button class="fav-button" type="submit"><img class="logo-button fixing-heart coloured-heart" src="/images/heart1.png" alt="saas"></button>
-            </form>
-            {{/if}}
-        </div>
+        {{!-- <img class="locandina" src={{poster}}/> --}}
+        <h1><a class="clean-a2" href="/favorites-details/{{imdbid}}">{{title}}</a></h1>
+        <h4>{{year}}</h4>
       </div>
       <div class="movie_desc">
       </div>
@@ -55,12 +26,10 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
         </ul>
       </div>
     </div>
-    <img class="blur_back" src="{{movieDetails.poster}}" alt="">
-                <div id="testando"></div>
-            {{!-- Favoritar --}}           
-</div>
-arrayFavDate, userDetail
+    <img class="blur_back" src="{{poster}}" alt="">
 
+  </div>
+    {{/each}}
 {{#if testMatch}}
 <div class="container">
       <input type="checkbox" id="check">
