--- a/views/movie/movies-favorites-details.hbs
+++ b/views/movie/movies-favorites-details.hbs
@@ -1,19 +1,8 @@
-{{!-- <h1>Movies Details</h1>
-{{#gt movieDetails.rating 5}}
-<div>Maior que 5</div> --}}
-{{!-- FUNCIONANDO
-LEMBRAR DE:
-TROCAR A BORDA DOS CARDS DEPENDENDO DA NOTA
-AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA    
-
- --}}
-{{!-- {{/gt}} --}}
 <div class="movie_card movie_card-details" id="bright">
     <div class="info_section">
 
       <div class="movie_header">
         {{!-- <img class="locandina" src={{movieDetails.poster}}/> --}}
-        </div>
         <h1 class="title-details"><a class="clean-a2 " href="/movies-details/{{imdbid}}">{{movieDetails.title}}</a></h1>
         <ul>
             {{#if errorMessage}}
@@ -23,17 +12,16 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
             <li><h4 class="movie-details-card-width">Rating: {{movieDetails.rating}}</h4></li>
             <li><h4 class="movie-details-card-width">Plot: {{movieDetails.plot}}</h4></li>
         </ul>
-                        <div>
-                    {{!-- {{#if testToDelete}} --}}
+                            <div>
             <form action="/favorites-details/{{movieDetails.imdbid}}/delete" method="POST">
-                <button class="del-button" type="submit"><img class="del-button" src="/images/waste.png" alt="saas"></button>
+                <button class="del-button" type="submit"><img class="del-button fixing-buttons" src="/images/waste.png" alt="saas"></button>
             </form>
-                    {{!-- {{/if}} --}}
         </div>
         <div>
             <form action="/favorites/{{movieDetails.imdbid}}/add" method="POST">
-                <button class="fav-button" type="submit"><img class="logo-button" src="/images/heart1-grey.png" alt="saas"></button>
+                <button class="fav-button" type="submit"><img class="logo-button fixing-heart" src="/images/heart1-grey.png" alt="saas"></button>
             </form>
+        </div>
       </div>
       <div class="movie_desc">
       </div>
@@ -46,15 +34,7 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
     <img class="blur_back" src="{{movieDetails.poster}}" alt="">
                 
             {{!-- Favoritar --}}
-            <form action="/favorites/{{movieDetails.imdbid}}/add" method="POST">
-               <button class="fav-button" type="submit">Favorite</button>
-            </form>
-            {{#if testToDelete}}
-            {{!-- Deletar --}}
-            <form action="/favorites-details/{{movieDetails.imdbid}}/delete" method="POST">
-                <button type="submit">Delete</button>
-            </form>
-            {{/if}}
+
             
 </div>
 
