tinder alike play

--- a/views/movie/feeling-lucky.hbs
+++ b/views/movie/feeling-lucky.hbs
@@ -15,7 +15,7 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
     <div class="info_section">
       <div class="movie_header">
         {{!-- <img class="locandina" src={{poster}}/> --}}
-        <h1><a class="clean-a2" href="/favorites-details/{{imdbid}}">{{title}}</a></h1>
+        <h1><a class="clean-a2" href="/feeling-lucky-details/{{imdbid}}">{{title}}</a></h1>
         <h4>{{year}}</h4>
       </div>
       <div class="movie_desc">
