--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -38,6 +38,9 @@
                      <li class="nav-item">
 						      <a class="nav-link" href="/matches">Matches</a>
 					      </li>
+                     <li class="nav-item">
+						      <a class="nav-link" href="/pass-feeling-lucky">Feeling Lucky</a>
+					      </li>
                   {{else}}
 					      <li class="nav-item">
 						      <a class="nav-link" href="/login">Signup/Login</a>
