--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,8 @@
   z-index: 99999;
   display: inline-flex;
   position: absolute;
-  left: 544px;
+  left: 369px;
+  margin-top: 4px;
 }
 
 .logo-button{
@@ -95,6 +96,10 @@
   margin-bottom: 10px;
   margin-top: 10px !important;
   
+}
+
+.fav-heart{
+  margin-top: -100px !important;
 }
 
 .clean-a{
