--- a/views/movie/feeling-lucky-details.hbs
+++ b/views/movie/feeling-lucky-details.hbs
@@ -22,27 +22,16 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
             <li><h4 class="movie-details-card-width">Rating: {{movieDetails.rating}}</h4></li>
             <li><h4 class="movie-details-card-width">Plot: {{movieDetails.plot}}</h4></li>
         </ul>
-                            <div>
-            {{#if testToDelete}}
-            <form action="/favorites-details/{{movieDetails.imdbid}}/delete" method="POST">
+        <div>
+            <form action="/feeling-lucky-details/{{movieDetails.imdbid}}/del" method="POST">
                 <button class="del-button" type="submit"><img class="del-button fixing-buttons" src="/images/waste.png" alt="saas"></button>
             </form>
-            {{else}}
-            <form action="/favorites-details/{{movieDetails.imdbid}}/delete" method="POST">
-                <button class="del-button" type="submit"><img class="del-button fixing-buttons" src="" alt=""></button>
-            </form>
-            {{/if}}
         </div>
         <div>
-            {{#if greyFav}}
-            <form action="/favorites/{{movieDetails.imdbid}}/add" method="POST">
-                <button class="fav-button" type="submit"><img class="logo-button fixing-heart" src="/images/heart1-grey.png" alt="saas"></button>
-            </form>
-            {{else}}
             <form action="/feeling-lucky-details/{{movieDetails.imdbid}}/fav" method="POST">
-                <button class="fav-button" type="submit"><img class="logo-button fixing-heart coloured-heart" src="/images/heart1.png" alt="saas"></button>
+                <button class="fav-button" type="submit"><img class="logo-button fixing-heart coloured-heart fav-heart" src="/images/heart1.png" alt="saas"></button>
             </form>
-            {{/if}}
+
         </div>
       </div>
       <div class="movie_desc">
@@ -64,6 +53,7 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
 </div>
 
 {{#if testMatch}}
+
 <div class="container">
       <input type="checkbox" id="check">
       <label class="show_button" id="check" for="check">Click Me</label>
@@ -86,5 +76,6 @@ AJEITAR PRA TER UM TAMANHO FIXO DE FOTO PRA QUE ELA NÃO DIMINUA/SUMA
         const button = document.getElementById('check');
         button.click()
     }
+    
     </script>
 {{/if}}
