Starting to implement cloudinary

--- a/views/auth/matches.hbs
+++ b/views/auth/matches.hbs
@@ -22,6 +22,6 @@
   </div>
     {{/each}}
     {{else}}
-    <h2 class="color-white">No matches yet, search for some movies</h2>
+    <h2 class="white-msg">No matches yet, search for some movies</h2>
 {{/if}}
 
