--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,11 @@
   margin-top: 4px;
 }
 
+.white-msg{
+  color:white;
+  font-size: 20px;
+}
+
 .logo-button{
   width: 65px !important;
   margin-top: -101px;
