--- a/views/auth/favorites-details.hbs
+++ b/views/auth/favorites-details.hbs
@@ -21,5 +21,5 @@
   </div>
     {{/each}}
     {{else}}
-    <h2 class="color-white">No favorites yet, search for some movies</h2>
+    <h2 class="white-msg">No favorites yet, search for some movies</h2>
 {{/if}}
