--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -53,9 +53,10 @@
                   <div class="field">
                      <input type="password" name="password" placeholder="Password" required>
                   </div>
-                    <div class="field">
-                        <input class="select-img" type="file" name="image" placeholder="Select an image" required>
-                    </div>
+                  <div class="file-input profile-pict">
+                    <input type="file" id="file" class="file img-input" name="image">
+                    <label for="file">Profile Picture</label>
+                  </div>
                   <!-- <div class="field">
                      <input type="password" placeholder="Confirm password" required>
                   </div> -->
