--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -5,8 +5,23 @@
       <title>Login and Registration Form in HTML | CodingNepal</title>
       <link rel="stylesheet" href="style.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href= "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+      <style>
+        .passwordInput{
+            margin-top: 5%; 
+            text-align :center;
+        }
+
+        .displayBadge{
+            margin-top: 5%; 
+            display: none; 
+            text-align :center;
+        }
+    </style>
    </head>
    <body>
+
+
       <div class="wrapper">
          <div class="title-text">
             <div class="title login">
@@ -51,12 +66,16 @@
                         <input type="text" name="name" placeholder="Name" required>
                     </div>
                   <div class="field">
-                     <input type="password" name="password" placeholder="Password" required>
+                     <input type="password" name="password" placeholder="Password" id="PassEntry" class="form-control passwordInput" required>
                   </div>
+                    <span id="StrengthDisp" class="badge displayBadge">Weak</span>
                   <div class="file-input profile-pict">
                     <input type="file" id="file" class="file img-input" name="image">
                     <label for="file">Profile Picture</label>
                   </div>
+                  {{!-- {{#if errorMessage}}
+                  <div>{{errorMessage}}</div>
+                  {{/if}} --}}
                   <!-- <div class="field">
                      <input type="password" placeholder="Confirm password" required>
                   </div> -->
@@ -86,6 +105,36 @@
            signupBtn.click();
            return false;
          });
+         //test do password
+         let timeout;
+let password = document.getElementById('PassEntry');
+let strengthBadge = document.getElementById('StrengthDisp');
+let strongPassword = new RegExp('(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[^A-Za-z0-9])(?=.{8,})')
+let mediumPassword = new RegExp('((?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[^A-Za-z0-9])(?=.{6,}))|((?=.*[a-z])(?=.*[A-Z])(?=.*[^A-Za-z0-9])(?=.{8,}))')
+function StrengthChecker(PasswordParameter) {
+    if(strongPassword.test(PasswordParameter)) {
+        strengthBadge.style.backgroundColor = "green";
+        strengthBadge.textContent = 'Strong';
+    } else if(mediumPassword.test(PasswordParameter)) {
+        strengthBadge.style.backgroundColor = 'blue';
+        strengthBadge.textContent = 'Medium';
+    } else {
+        strengthBadge.style.backgroundColor = 'red';
+        strengthBadge.textContent = 'Weak';
+    }
+}
+password.addEventListener("input", () => {
+    strengthBadge.style.display = 'block';
+    clearTimeout(timeout);
+    timeout = setTimeout(() => StrengthChecker(password.value), 500);
+    if(password.value.length !== 0) {
+        strengthBadge.style.display != 'block';
+    } else {
+        strengthBadge.style.display = 'none';
+    }
+});
       </script>
+      
    </body>
+   
 </html>
