--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1205,3 +1205,19 @@ Tinder Template by Miami
   margin-top: 20px;
   margin-bottom: -20px;
 }
+
+
+.new-alert-box{
+  max-width: 300px;
+  width: 100%;
+  max-height: 334px;
+}
+
+.grey-icon{
+  color: #585858 !important;
+  border: 3px solid #585858 !important;
+}
+
+.push-red-box{
+  margin-top: 4px !important;
+}
