--- a/views/auth/favorites-details.hbs
+++ b/views/auth/favorites-details.hbs
@@ -16,7 +16,7 @@
         </ul>
       </div>
     </div>
-    <img class="blur_back" src="{{poster}}" alt="">
+    <a href="/movies-details/{{imdbid}}"><img class="blur_back" src="{{poster}}" alt=""></a>
 
   </div>
     {{/each}}
